# soundmentations

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: deploy-docs.yml
docs/source/: api.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  modules.rst  quickstart.rst  soundmentations.rst  tutorials.rst
examples/: example.py
src/soundmentations/: __init__.py
src/soundmentations/core/: composition.py  transforms_interface.py
src/soundmentations/transforms/: __init__.py
src/soundmentations/transforms/amplitude/: __init__.py  compressor.py  fade.py  gain.py  limiter.py
src/soundmentations/transforms/pitch/: __init__.py  pitch_shift.py
src/soundmentations/transforms/time/: __init__.py  mask.py  pad.py  trim.py
src/soundmentations/utils/: __init__.py  audio.py
tests/: test_audio.py  test_pad.py  test_trim.py
