[metadata]
name = soundmentations
version = 0.0.1
url = https://github.com/saumyarr8/soundmentations
author = Saumya Ranjan
author_email = saumyarr8@outlook.com
description = Soundmentations: A Python library for sound classification and augmentation
keywords = sound, classification, augmentation, machine learning
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=2.0.0
    scipy>=1.0.0
    librosa>=0.10.0
    soundfile>=0.10.0

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx>=7.0.0
    sphinx-copybutton>=0.5.0
    furo>=2024.08.06

[tool:pytest]
testpaths = tests

[coverage:paths]
source =
    src/soundmentations
    */site-packages/soundmentations

[coverage:report]
skip_covered = True

[tox:tox]
isolated_build = True
envlist = py39, py310, py311, py312

[testenv]
deps =
    pytest
    pytest-cov